--- a/kaggle_competitions/house-prices-advanced-regression-techniques/submission.ipynb
+++ b/kaggle_competitions/house-prices-advanced-regression-techniques/submission.ipynb
@@ -56,7 +56,7 @@
     "y_scaler = StandardScaler()\n",
     "\n",
     "X = pd.DataFrame(X_scaler.fit_transform(X), columns=X.columns)\n",
-    "y = pd.Series(y_scaler.fit_transform(y.values.reshape(-1, 1)).ravel())\n"
+    "y = pd.Series(y_scaler.fit_transform(y.values.reshape(-1, 1)).ravel())"
    ]
   },
   {
@@ -65,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, X_test = X.iloc[:df_train.shape[0]], X.iloc[df_train.shape[0]:]\n",
-    "y, y_test = y.iloc[:df_train.shape[0]], y.iloc[df_train.shape[0]:]"
+    "X, X_test = X.iloc[: df_train.shape[0]], X.iloc[df_train.shape[0] :]\n",
+    "y, y_test = y.iloc[: df_train.shape[0]], y.iloc[df_train.shape[0] :]"
    ]
   },
   {
@@ -623,17 +623,18 @@
    ],
    "source": [
     "model = XGBRegressor(\n",
-    "    learning_rate = 0.01,\n",
+    "    learning_rate=0.01,\n",
     "    max_depth=5,\n",
     "    n_estimators=1000,\n",
     "    subsample=0.8,\n",
     "    colsample_bytree=0.8,\n",
     "    random_state=42,\n",
-    "    objective=\"reg:squarederror\"\n",
+    "    objective=\"reg:squarederror\",\n",
     ")\n",
     "\n",
     "model.fit(\n",
-    "    X_train, y_train,\n",
+    "    X_train,\n",
+    "    y_train,\n",
     "    eval_set=[(X_val, y_val)],\n",
     "    verbose=50,\n",
     ")"
@@ -648,7 +649,7 @@
     "y_pred = pd.Series(model.predict(X_val))\n",
     "\n",
     "y_val_actual = y_scaler.inverse_transform(y_val.values.reshape(-1, 1))\n",
-    "y_pred_actual = y_scaler.inverse_transform(y_pred.values.reshape(-1,1))"
+    "y_pred_actual = y_scaler.inverse_transform(y_pred.values.reshape(-1, 1))"
    ]
   },
   {
@@ -726,10 +727,9 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame({\n",
-    "    \"y_val_actual\": y_val_actual[:,0],\n",
-    "    \"y_pred_actual\": y_pred_actual[:,0]\n",
-    "})\n",
+    "df = pd.DataFrame(\n",
+    "    {\"y_val_actual\": y_val_actual[:, 0], \"y_pred_actual\": y_pred_actual[:, 0]}\n",
+    ")\n",
     "df.head()"
    ]
   },
@@ -740,12 +740,9 @@
    "outputs": [],
    "source": [
     "y_test_pred = pd.Series(model.predict(X_test))\n",
-    "y_submission = y_scaler.inverse_transform(y_test_pred.values.reshape(-1,1))\n",
+    "y_submission = y_scaler.inverse_transform(y_test_pred.values.reshape(-1, 1))\n",
     "\n",
-    "df_submission = pd.DataFrame({\n",
-    "    \"Id\": df_test[\"Id\"],\n",
-    "    \"SalePrice\": y_submission[:,0]\n",
-    "})\n",
+    "df_submission = pd.DataFrame({\"Id\": df_test[\"Id\"], \"SalePrice\": y_submission[:, 0]})\n",
     "df_submission.to_csv(\"submission.csv\", index=False)"
    ]
   }
