--- a/kaggle_competitions/house-prices-advanced-regression-techniques/submission_torch.ipynb
+++ b/kaggle_competitions/house-prices-advanced-regression-techniques/submission_torch.ipynb
@@ -60,6 +60,7 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "\n",
     "# Define the network\n",
     "class HousePriceNet(nn.Module):\n",
     "    def __init__(self, input_size=79):\n",
@@ -72,7 +73,7 @@
     "        self.batch_norm1 = nn.BatchNorm1d(256)\n",
     "        self.batch_norm2 = nn.BatchNorm1d(128)\n",
     "        self.batch_norm3 = nn.BatchNorm1d(64)\n",
-    "        \n",
+    "\n",
     "    def forward(self, x):\n",
     "        x = self.batch_norm1(torch.relu(self.fc1(x)))\n",
     "        x = self.dropout(x)\n",
@@ -81,6 +82,7 @@
     "        x = self.batch_norm3(torch.relu(self.fc3(x)))\n",
     "        x = self.fc4(x)\n",
     "        return x\n",
+    "\n",
     "\n",
     "# Data loading and preprocessing (same as before)\n",
     "df_train = pd.read_csv(\"train.csv\")\n",
@@ -113,8 +115,8 @@
     "y = pd.Series(y_scaler.fit_transform(y.values.reshape(-1, 1)).ravel())\n",
     "\n",
     "# Split back into train/test\n",
-    "X, X_test = X.iloc[:df_train.shape[0]], X.iloc[df_train.shape[0]:]\n",
-    "y, y_test = y.iloc[:df_train.shape[0]], y.iloc[df_train.shape[0]:]\n",
+    "X, X_test = X.iloc[: df_train.shape[0]], X.iloc[df_train.shape[0] :]\n",
+    "y, y_test = y.iloc[: df_train.shape[0]], y.iloc[df_train.shape[0] :]\n",
     "\n",
     "# Create train/validation split\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -130,12 +132,14 @@
     "model = HousePriceNet()\n",
     "criterion = nn.MSELoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
-    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=5, verbose=True)\n",
+    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(\n",
+    "    optimizer, mode=\"min\", factor=0.5, patience=5, verbose=True\n",
+    ")\n",
     "\n",
     "# Training loop\n",
     "n_epochs = 100\n",
     "batch_size = 32\n",
-    "best_val_loss = float('inf')\n",
+    "best_val_loss = float(\"inf\")\n",
     "patience = 10\n",
     "patience_counter = 0\n",
     "\n",
@@ -143,41 +147,41 @@
     "    model.train()\n",
     "    # Mini-batch training\n",
     "    for i in range(0, len(X_train), batch_size):\n",
-    "        batch_X = X_train[i:i+batch_size]\n",
-    "        batch_y = y_train[i:i+batch_size]\n",
-    "        \n",
+    "        batch_X = X_train[i : i + batch_size]\n",
+    "        batch_y = y_train[i : i + batch_size]\n",
+    "\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(batch_X)\n",
     "        loss = criterion(outputs, batch_y)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "    \n",
+    "\n",
     "    # Validation\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        val_outputs = model(X_val)\n",
     "        val_loss = criterion(val_outputs, y_val)\n",
-    "        \n",
+    "\n",
     "    # Print progress\n",
     "    if epoch % 10 == 0:\n",
-    "        print(f'Epoch {epoch}, Val Loss: {val_loss.item():.4f}')\n",
-    "    \n",
+    "        print(f\"Epoch {epoch}, Val Loss: {val_loss.item():.4f}\")\n",
+    "\n",
     "    # Learning rate scheduling\n",
     "    scheduler.step(val_loss)\n",
-    "    \n",
+    "\n",
     "    # Early stopping\n",
     "    if val_loss < best_val_loss:\n",
     "        best_val_loss = val_loss\n",
     "        patience_counter = 0\n",
-    "        torch.save(model.state_dict(), 'best_model.pth')\n",
+    "        torch.save(model.state_dict(), \"best_model.pth\")\n",
     "    else:\n",
     "        patience_counter += 1\n",
     "        if patience_counter >= patience:\n",
-    "            print(f'Early stopping at epoch {epoch}')\n",
+    "            print(f\"Early stopping at epoch {epoch}\")\n",
     "            break\n",
     "\n",
     "# Load best model and make predictions\n",
-    "model.load_state_dict(torch.load('best_model.pth'))\n",
+    "model.load_state_dict(torch.load(\"best_model.pth\"))\n",
     "model.eval()\n",
     "\n",
     "# Make predictions\n",
@@ -191,17 +195,13 @@
     "y_submission = y_scaler.inverse_transform(y_test_pred.numpy())\n",
     "\n",
     "# Create submission file\n",
-    "df_submission = pd.DataFrame({\n",
-    "    \"Id\": df_test[\"Id\"],\n",
-    "    \"SalePrice\": y_submission[:,0]\n",
-    "})\n",
+    "df_submission = pd.DataFrame({\"Id\": df_test[\"Id\"], \"SalePrice\": y_submission[:, 0]})\n",
     "df_submission.to_csv(\"submission_torch.csv\", index=False)\n",
     "\n",
     "# Print validation results\n",
-    "df = pd.DataFrame({\n",
-    "    \"y_val_actual\": y_val_actual[:,0],\n",
-    "    \"y_pred_actual\": y_val_pred_actual[:,0]\n",
-    "})\n",
+    "df = pd.DataFrame(\n",
+    "    {\"y_val_actual\": y_val_actual[:, 0], \"y_pred_actual\": y_val_pred_actual[:, 0]}\n",
+    ")\n",
     "print(\"\\nValidation Results:\")\n",
     "print(df.head())"
    ]
