--- a/notebooks/xgboost-example.ipynb
+++ b/notebooks/xgboost-example.ipynb
@@ -18,7 +18,9 @@
    "outputs": [],
    "source": [
     "data = load_iris()\n",
-    "X_train, X_test, y_train, y_test = train_test_split(data.data, data.target, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    data.data, data.target, test_size=0.2, random_state=42\n",
+    ")"
    ]
   },
   {
@@ -66,9 +68,9 @@
     "from xgboost import plot_tree\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.figure(figsize=(20,10))\n",
+    "plt.figure(figsize=(20, 10))\n",
     "plot_tree(bst, num_trees=1)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
