--- a/kaggle_competitions/backpack-prediction-challenge/submission.ipynb
+++ b/kaggle_competitions/backpack-prediction-challenge/submission.ipynb
@@ -11,7 +11,12 @@
     "\n",
     "from xgboost import XGBRegressor\n",
     "\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, LabelEncoder, OrdinalEncoder\n",
+    "from sklearn.preprocessing import (\n",
+    "    StandardScaler,\n",
+    "    OneHotEncoder,\n",
+    "    LabelEncoder,\n",
+    "    OrdinalEncoder,\n",
+    ")\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -21,8 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv('train.csv')\n",
-    "df_test = pd.read_csv('test.csv')\n",
+    "df_train = pd.read_csv(\"train.csv\")\n",
+    "df_test = pd.read_csv(\"test.csv\")\n",
     "\n",
     "n_train = df_train.shape[0]\n",
     "\n",
@@ -35,15 +40,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "excluded_columns = ['id']\n",
-    "target_column = 'Price'\n",
+    "excluded_columns = [\"id\"]\n",
+    "target_column = \"Price\"\n",
     "\n",
     "onehotencode_columns = [\n",
     "    \"Brand\",\n",
     "    \"Material\",\n",
     "    \"Style\",\n",
     "    \"Color\",\n",
-    "\n",
     "]\n",
     "\n",
     "ordinal_columns = {\n",
@@ -56,12 +60,9 @@
     "    \"Waterproof\",\n",
     "]\n",
     "\n",
-    "standardscale_columns = [\n",
-    "    \"Compartments\",\n",
-    "    \"Weight Capacity (kg)\"\n",
-    "]\n",
+    "standardscale_columns = [\"Compartments\", \"Weight Capacity (kg)\"]\n",
     "\n",
-    "encoders = {}\n"
+    "encoders = {}"
    ]
   },
   {
@@ -73,11 +74,15 @@
     "X = df.drop(columns=excluded_columns + [target_column])\n",
     "\n",
     "for column in onehotencode_columns:\n",
-    "    encoders[column] = OneHotEncoder(sparse_output=False, handle_unknown='ignore')\n",
+    "    encoders[column] = OneHotEncoder(sparse_output=False, handle_unknown=\"ignore\")\n",
     "    encoders[column].fit(df[column].values.reshape(-1, 1))\n",
     "\n",
     "for column in ordinal_columns:\n",
-    "    encoders[column] = OrdinalEncoder(categories=[ordinal_columns[column]], handle_unknown='use_encoded_value', unknown_value=-1)\n",
+    "    encoders[column] = OrdinalEncoder(\n",
+    "        categories=[ordinal_columns[column]],\n",
+    "        handle_unknown=\"use_encoded_value\",\n",
+    "        unknown_value=-1,\n",
+    "    )\n",
     "    encoders[column].fit(df[column].values.reshape(-1, 1))\n",
     "\n",
     "for column in labelencode_columns:\n",
@@ -126,7 +131,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=42)"
+    "X_train, X_val, y_train, y_val = train_test_split(\n",
+    "    X_train, y_train, test_size=0.2, random_state=42\n",
+    ")"
    ]
   },
   {
@@ -1605,7 +1612,7 @@
     "\n",
     "df_test[target_column] = y_pred\n",
     "\n",
-    "df_test[['id', target_column]].to_csv('submission.csv', index=False)"
+    "df_test[[\"id\", target_column]].to_csv(\"submission.csv\", index=False)"
    ]
   },
   {
@@ -1969,7 +1976,9 @@
     "features = X.columns\n",
     "importances = model.feature_importances_\n",
     "\n",
-    "feature_importances = pd.DataFrame({'feature': features, 'importance': importances}).sort_values(by='importance', ascending=False)\n",
+    "feature_importances = pd.DataFrame(\n",
+    "    {\"feature\": features, \"importance\": importances}\n",
+    ").sort_values(by=\"importance\", ascending=False)\n",
     "feature_importances"
    ]
   },
