--- a/kaggle_competitions/classification-with-an-academic-success-dataset/submission.ipynb
+++ b/kaggle_competitions/classification-with-an-academic-success-dataset/submission.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder, OneHotEncoder\n",
@@ -31,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv('train.csv')\n",
-    "df_test = pd.read_csv('test.csv')\n",
+    "df_train = pd.read_csv(\"train.csv\")\n",
+    "df_test = pd.read_csv(\"test.csv\")\n",
     "\n",
     "df = pd.concat([df_train, df_test], axis=0, sort=False).reset_index(drop=True)\n",
     "\n",
@@ -46,11 +45,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "excluded_columns = [\n",
-    "    'id'\n",
-    "]\n",
+    "excluded_columns = [\"id\"]\n",
     "\n",
-    "target_column = 'Target'\n",
+    "target_column = \"Target\"\n",
     "\n",
     "\n",
     "onehotencode_columns = [\n",
@@ -73,18 +70,20 @@
     "    \"Curricular units 1st sem (enrolled)\",\n",
     "    \"Curricular units 1st sem (evaluations)\",\n",
     "    \"Curricular units 1st sem (approved)\",\n",
-    "    'Curricular units 1st sem (grade)',\n",
-    "    'Curricular units 1st sem (without evaluations)',\n",
-    "    'Curricular units 2nd sem (credited)',\n",
-    "    'Curricular units 2nd sem (enrolled)',\n",
-    "    'Curricular units 2nd sem (evaluations)',\n",
-    "    'Curricular units 2nd sem (approved)',\n",
-    "    'Curricular units 2nd sem (grade)',\n",
-    "    'Curricular units 2nd sem (without evaluations)', 'Unemployment rate',\n",
-    "    'Inflation rate', 'GDP'\n",
+    "    \"Curricular units 1st sem (grade)\",\n",
+    "    \"Curricular units 1st sem (without evaluations)\",\n",
+    "    \"Curricular units 2nd sem (credited)\",\n",
+    "    \"Curricular units 2nd sem (enrolled)\",\n",
+    "    \"Curricular units 2nd sem (evaluations)\",\n",
+    "    \"Curricular units 2nd sem (approved)\",\n",
+    "    \"Curricular units 2nd sem (grade)\",\n",
+    "    \"Curricular units 2nd sem (without evaluations)\",\n",
+    "    \"Unemployment rate\",\n",
+    "    \"Inflation rate\",\n",
+    "    \"GDP\",\n",
     "]\n",
     "\n",
-    "encoders = {}\n"
+    "encoders = {}"
    ]
   },
   {
@@ -96,7 +95,7 @@
     "X = df.drop(columns=excluded_columns + [target_column])\n",
     "\n",
     "for column in onehotencode_columns:\n",
-    "    encoders[column] = OneHotEncoder(sparse_output=False, handle_unknown='ignore')\n",
+    "    encoders[column] = OneHotEncoder(sparse_output=False, handle_unknown=\"ignore\")\n",
     "    encoders[column].fit(df[column].values.reshape(-1, 1))\n",
     "\n",
     "for column in labelencode_columns:\n",
@@ -139,7 +138,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=42)"
+    "X_train, X_val, y_train, y_val = train_test_split(\n",
+    "    X_train, y_train, test_size=0.2, random_state=42\n",
+    ")"
    ]
   },
   {
@@ -702,7 +703,7 @@
     }
    ],
    "source": [
-    "model = XGBClassifier(eval_metric='merror')\n",
+    "model = XGBClassifier(eval_metric=\"merror\")\n",
     "model.fit(X_train, y_train, eval_set=[(X_val, y_val)])"
    ]
   },
@@ -730,7 +731,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test[['id', target_column]].to_csv('submission.csv', index=False)"
+    "df_test[[\"id\", target_column]].to_csv(\"submission.csv\", index=False)"
    ]
   },
   {
@@ -761,7 +762,6 @@
    ],
    "source": [
     "# Look at feature importance\n",
-    "import matplotlib.pyplot as plt\n",
     "from xgboost import plot_importance\n",
     "\n",
     "plot_importance(model)"
@@ -851,13 +851,12 @@
    ],
    "source": [
     "# Get feature importances as a dataframe\n",
-    "importance_df = pd.DataFrame({\n",
-    "    'feature': X.columns,\n",
-    "    'importance': model.feature_importances_\n",
-    "})\n",
+    "importance_df = pd.DataFrame(\n",
+    "    {\"feature\": X.columns, \"importance\": model.feature_importances_}\n",
+    ")\n",
     "\n",
     "# Sort by importance and print\n",
-    "print(importance_df.sort_values('importance', ascending=False))"
+    "print(importance_df.sort_values(\"importance\", ascending=False))"
    ]
   },
   {
